[gd_scene load_steps=3 format=3 uid="uid://qifjg54k0pnf"]

[ext_resource type="Script" path="res://scenes/meteors_1.gd" id="1_h24va"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gb3jd"]
radius = 22.3607

[node name="Meteors_1" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_h24va")

[node name="Meteor_1" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gb3jd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
